listings/ch17-async-await/listing-17-03-fix/output.txt
$ cargo run
   Compiling async_await v0.1.0 (/Users/chris/dev/rust-lang/book/listings/ch17-async-await/listing-17-03-fix)
error[E0752]: `main` function is not allowed to be `async`
 --> src/main.rs:2:1
  |
2 | async fn main() {
  | ^^^^^^^^^^^^^^^ `main` function is not allowed to be `async`

For more information about this error, try `rustc --explain E0752`.
error: could not compile `async_await` (bin "async_await") due to 1 previous error
